force-app/main/default/objects/Payment__c/fields/Dealer_contact__c.field-meta.xml
<CustomField>
    <fullName>Dealer_contact__c</fullName>
    <label>Dealer contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>