force-app/main/default/objects/Payment__c/fields/Dealer_Email__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Email__c</fullName>
    <label>Dealer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>