force-app/main/default/objects/Payment__c/fields/Payment_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_Id__c</fullName>
    <label>Payment Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>