force-app/main/default/objects/Payment__c/fields/Razorpay_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Order_Id__c</fullName>
    <label>Razorpay Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>