force-app/main/default/objects/Payment__c/fields/Razorpay_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Payment_Id__c</fullName>
    <label>Razorpay Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>